--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,122 @@
-<div class="container text-center">
-  <h1>HOME PAGE</h1>
+<div class="custom-container">
+  <div class="d-flex justify-content-left my-3">
+    <img class="logo" src="../../../assets/logo.png" alt="logo">
+  </div>
+  <div class="box-container">
+    <div class="row box">
+      <div class="col-lg-6 my-auto">
+        <div class="d-flex justify-content-center">
+          <img class="eye-globe" src="../../../assets/eye-globe.svg" alt="eye-globe">
+        </div>
+      </div>
+      <div class="col-lg-6 my-auto">
+        <div class="d-flex justify-content-center">
+          <p class="text bodyText text-lg-center">
+            We're all in this together. Consider joining a community that strives to relax your mind.
+          </p>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="mx-2">
+            <button *ngIf="(fireAuth.user | async)" mat-raised-button color="primary" (click)="logout()">
+              <mat-icon>logout</mat-icon>
+              <span>Log out</span>
+            </button>
+          </div>
+          <div class="mx-2">
+            <button *ngIf="!(fireAuth.user | async)" mat-raised-button color="primary" routerLink="/login">
+              <mat-icon>login</mat-icon>
+              <span> Login</span>
+            </button>
+          </div>
+          <div class="mx-2">
+            <button *ngIf="!(fireAuth.user | async)" mat-raised-button color="primary" routerLink="/signup">
+              <mat-icon>person_add</mat-icon>
+              <span> Sign Up</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<button *ngIf="!(fireAuth.user | async)" mat-raised-button color="primary" routerLink="/login">
+<div class="container">
+  <div class="row">
+      <div class="col-lg-4 col-md-6 content-card">
+          <div class="card-big-shadow">
+              <div class="card card-just-text" data-background="color" data-color="blue" data-radius="none">
+                  <div class="content">
+                      <h6 class="category">Anxiety</h6>
+                      <h4 class="title"><a href="#">Blue Card</a></h4>
+                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                  </div>
+              </div> <!-- end card -->
+          </div>
+      </div>
+      
+      <div class="col-lg-4 col-md-6 content-card">
+          <div class="card-big-shadow">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                  <div class="content">
+                      <h6 class="category">Best cards</h6>
+                      <h4 class="title"><a href="#">Green Card</a></h4>
+                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                  </div>
+              </div> <!-- end card -->
+          </div>
+      </div>
+      
+      <div class="col-lg-4 col-md-6 content-card">
+          <div class="card-big-shadow">
+              <div class="card card-just-text" data-background="color" data-color="yellow" data-radius="none">
+                  <div class="content">
+                      <h6 class="category">Best cards</h6>
+                      <h4 class="title"><a href="#">Yellow Card</a></h4>
+                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                  </div>
+              </div> <!-- end card -->
+          </div>
+      </div>
+      
+      <div class="col-lg-4 col-md-6 content-card">
+          <div class="card-big-shadow">
+              <div class="card card-just-text" data-background="color" data-color="brown" data-radius="none">
+                  <div class="content">
+                      <h6 class="category">Best cards</h6>
+                      <h4 class="title"><a href="#">Brown Card</a></h4>
+                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                  </div>
+              </div> <!-- end card -->
+          </div>
+      </div>
+      
+      <div class="col-lg-4 col-md-6 content-card">
+          <div class="card-big-shadow">
+              <div class="card card-just-text" data-background="color" data-color="purple" data-radius="none">
+                  <div class="content">
+                      <h6 class="category">Best cards</h6>
+                      <h4 class="title"><a href="#">Purple Card</a></h4>
+                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                  </div>
+              </div> <!-- end card -->
+          </div>
+      </div>
+      
+      <div class="col-lg-4 col-md-6 content-card">
+          <div class="card-big-shadow">
+              <div class="card card-just-text" data-background="color" data-color="orange" data-radius="none">
+                  <div class="content">
+                      <h6 class="category">Best cards</h6>
+                      <h4 class="title"><a href="#">Orange Card</a></h4>
+                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                  </div>
+              </div> <!-- end card -->
+          </div>
+      </div>
+  </div>
+</div>
+
+<!-- <button *ngIf="!(fireAuth.user | async)" mat-raised-button color="primary" routerLink="/login">
   <mat-icon>login</mat-icon>
   <span>Login</span>
 </button>
@@ -20,7 +134,7 @@
 </button>
 <br *ngIf="!(fireAuth.user | async)">
 <br *ngIf="!(fireAuth.user | async)">
-<!-- <button mat-raised-button color="primary" routerLink="/forgot-password">
+<button mat-raised-button color="primary" routerLink="/forgot-password">
   <mat-icon>help_outline</mat-icon>
   <span>Forgot password</span>
 </button>
@@ -31,7 +145,7 @@
   <span>Resend email verification</span>
 </button>
 <br>
-<br> -->
+<br>
 <button mat-raised-button color="primary" routerLink="/dashboard">
   <mat-icon>dashboard</mat-icon>
   <span>Dashboard</span>
@@ -50,4 +164,4 @@
 <mat-card *ngIf="!(fireAuth.user | async)">
   <mat-icon>do_not_disturb</mat-icon>
   <span>User is not logged in</span>
-</mat-card>
+</mat-card> -->
