--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -14,7 +14,6 @@
     background-image: url('../../../assets/yellow-paper.png');
     background-size: cover;
     box-shadow: -5px 5px 5px grey;
-    border-radius: 10px;
 }
 
 .box {
@@ -54,7 +53,7 @@
 }
 
 .mat-primary {
-    background-color: palegreen;
+    background-color: white;
     color: #000;
 }
 
@@ -135,7 +134,7 @@ h6, .h6 {
 }
 
 .card .description {
-    font-size: 16px;
+    font-size: 17px;
     color: #66615b;
 }
 
