--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,35 +1,62 @@
-<div class="container text-center">
-    <h1>LOGIN PAGE</h1>
-</div>
-<br>
-<br>
-<button mat-raised-button color="primary" routerLink="/home">
-    <mat-icon>home</mat-icon>
-    <span>Home</span>
-</button>
-
-<mat-card>
-    <form [formGroup]="loginForm" (ngSubmit)="loginUser()" type="">
-        <p>
-            <mat-form-field appearance="outline">
-                <mat-label>Email</mat-label>
-                <input autocomplete="off" formControlName="email" type="email" matInput placeholder="Email">
-            </mat-form-field>
-        </p>
-        <p>
-            <mat-form-field appearance="outline">
-                <mat-label>Password</mat-label>
-                <input autocomplete="off" formControlName="password" type="password" matInput placeholder="Password">
-            </mat-form-field>
-        </p>
-        <div *ngIf="firebaseErrorMessage != ''" class="error-style">
-            <span>{{ firebaseErrorMessage }}</span>
+<div class="custom-container">
+    <div class="row mb-4 my-lg-0">
+        <div class="col-md-6">
+            <div class="my-3">
+              <img class="logo" src="../../../assets/logo.png" alt="logo">
+            </div>
         </div>
+        <div class="col-md-6 my-auto d-flex justify-content-center">
+            <div class="mr-3">
+                <button mat-raised-button color="primary" routerLink="/home">
+                    <mat-icon>home</mat-icon>
+                    <span>Home</span>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="box-container">
+        <div class="box">
+            <div class="bodyText text-center mb-1">
+                Welcome back!
+            </div>
+            <form class="form" [formGroup]="loginForm" type="">
+        
+                <div class="form-panel">
+                    <div class="form-row">
+                        <input type="email" name="email" formControlName="email" placeholder="Email Address" [ngClass]="{'invalid' : email && email.invalid && email.touched, 'valid' : email && email.valid && email.touched}">
+                        <br>
+                    </div>
+                </div>
+                <div class="text-center error-text" style="color:red; visibility:hidden;" [ngClass]="{'show' : email && email.invalid && email.touched}">
+                    Please enter a valid email
+                </div>
+        
+                <div class="form-panel">
+                    <div class="form-row">
+                        <input type="password" name="password" formControlName="password" placeholder="Password" [ngClass]="{'invalid' : password && password.invalid && password.touched, 'valid' : password && password.valid && password.touched}">
+                        <br>
+                    </div>
+                </div>
+                <div class="text-center error-text" style="color:red; visibility:hidden;" [ngClass]="{'show' : password && password.invalid && password.touched}">
+                    Please enter a valid password
+                </div>
 
-        <button mat-raised-button color="primary">Login</button>
-    </form>
-</mat-card>
+                <div class="d-flex justify-content-center mt-2" *ngIf="loginForm.invalid">
+                    <button mat-raised-button color="primary" disabled>Login</button>
+                </div>
+                <div class="d-flex justify-content-center mt-2" *ngIf="loginForm.valid">
+                    <button (click)="loginUser()" mat-raised-button color="primary">Login</button>
+                </div>
 
-<div class="progressIndicator" [style.display]="isProgressVisible ? 'inline' : 'none' ">
-    <mat-progress-spinner class=" example-margin" color="primary" mode="indeterminate"></mat-progress-spinner>
+            </form>
+            <div class="d-flex justify-content-center mt-2">
+                <div class="progressIndicator" [style.display]="isProgressVisible ? 'inline' : 'none' ">
+                    <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
+        {{firebaseErrorMessage}}
+    </div>
 </div>
