--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,6 +10,8 @@
 
 <mat-list *ngIf="(user | async)">
     <mat-list-item>Account Type: {{ (user | async)?.accountType }}</mat-list-item>
+    <mat-list-item>FirstName: {{ (user | async)?.firstName }}</mat-list-item>
+    <mat-list-item>LastName: {{ (user | async)?.lastName }}</mat-list-item>
     <mat-list-item>Display Name: {{ (user | async)?.displayName }}</mat-list-item>
     <mat-list-item>Display Name (lower): {{ (user | async)?.displayName_lower }}</mat-list-item>
     <mat-list-item>Email: {{ (user | async)?.email }}</mat-list-item>
