--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,21 +1,68 @@
-<div class="container text-center">
-    <h1>DASHBOARD PAGE</h1>
+<div class="image-one d-none d-lg-block">
+    <img class="clipart-one" src="../../../assets/Woman-Sitting-At-Table.svg" alt="clipart">
 </div>
-<br>
-<br>
-<button mat-raised-button color="primary" routerLink="/home">
-    <mat-icon>home</mat-icon>
-    <span>Home</span>
-</button>
 
-<mat-list *ngIf="(user | async)">
+<div class="image-two d-none d-lg-block">
+    <img class="clipart-two" src="../../../assets/Woman-Sitting-Down-With-Laptop.svg" alt="clipart">
+</div>
+
+<div class="custom-container">
+    <div class="row my-lg-0">
+        <div class="col-md-6">
+            <div class="my-3">
+              <img routerLink="/home" class="logo" src="../../../assets/logo.png" alt="logo">
+            </div>
+        </div>
+        <div class="col-md-6 my-auto d-flex justify-content-center">
+            <div class="mx-2">
+                <button mat-raised-button color="primary" routerLink="/home">
+                    <mat-icon>home</mat-icon>
+                    <span>Home</span>
+                </button>
+            </div>
+            <div class="mx-2" *ngIf="(fireAuth.user | async)">
+                <button mat-raised-button color="primary" (click)="logout()">
+                  <mat-icon>logout</mat-icon>
+                  <span>Log out</span>
+                </button>
+              </div>
+        </div>
+    </div>
+</div>
+
+<div class="container mb-5">
+    <div class="d-flex justify-content-center mt-4">
+        <button routerLink="/create-post" mat-raised-button color="primary" style="background-color:lightgreen !important;">
+            <mat-icon>add_box</mat-icon>
+            <span> Add Post</span>
+        </button>
+    </div>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 content-card" *ngFor="let post of postData">
+            <a routerLink="/posts/{{post.id}}">
+                <div class="card-big-shadow">
+                    <div class="card card-just-text" data-background="color" attr.data-color="{{post.color}}" data-radius="none">
+                        <div class="content">
+                            <h6 class="author mb-2">{{post.author}}</h6>
+                            <h4 class="title" style="color:rgb(93, 93, 93);">{{post.title | truncate:28}}</h4>
+                            <p class="message">{{post.message | truncate:100}}</p>
+                        </div>
+                    </div> <!-- end card -->
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
+
+<!-- <mat-list *ngIf="(user | async)">
     <mat-list-item>Account Type: {{ (user | async)?.accountType }}</mat-list-item>
     <mat-list-item>FirstName: {{ (user | async)?.firstName }}</mat-list-item>
     <mat-list-item>LastName: {{ (user | async)?.lastName }}</mat-list-item>
+    <mat-list-item>FullName: {{ (user | async)?.fullName }}</mat-list-item>
     <mat-list-item>Display Name: {{ (user | async)?.displayName }}</mat-list-item>
     <mat-list-item>Display Name (lower): {{ (user | async)?.displayName_lower }}</mat-list-item>
-    <mat-list-item>Email: {{ (user | async)?.email }}</mat-list-item>
-    <mat-list-item>Email (lower): {{ (user | async)?.email_lower }}</mat-list-item>
-    <mat-list-item>Email Verification Status: {{ (fireAuth.user | async)?.emailVerified }}</mat-list-item>
+    <mat-list-item>email: {{ (user | async)?.email }}</mat-list-item>
+    <mat-list-item>email (lower): {{ (user | async)?.email_lower }}</mat-list-item>
+    <mat-list-item>email Verification Status: {{ (fireAuth.user | async)?.emailVerified }}</mat-list-item>
     <mat-list-item>isAdmin: {{ (user | async)?.isAdmin }}</mat-list-item>
-</mat-list>
+</mat-list> -->
