--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,3 +1,264 @@
-h1 {
-    color: brown;
+.custom-container {
+    max-width: 1400px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.box-container {
+    position: relative;
+    margin: 0 auto;
+    height: auto;
+    background-color: rgb(190, 190, 190);
+    isolation: isolate;
+    box-shadow: -5px 5px 5px grey;
+}
+
+.box-container::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    opacity: 0.1;
+    background-image: url('../../../assets/yellow-paper.png');
+    background-size: cover;
+}
+
+.box {
+    width: 90%;
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.logo {
+    width: 100%;
+}
+
+.image-one {
+    width: 50%;
+    position: fixed;
+    bottom: 0;
+    opacity: 0.3;
+    padding: 30px;
+}
+
+.image-two {
+    width: 50%;
+    position: fixed;
+    bottom:0;
+    right: 0;
+    opacity: 0.3;
+    padding: 30px;
+}
+
+.clipart-one {
+    width: 50%;
+}
+
+.clipart-two {
+    width: 30%;
+    float: right;
+}
+
+.bodyText {
+    resize: none;
+    color: black;
+    font-size: 1.5em;
+    line-height: 1.4em;
+}
+
+.mat-icon{
+    height:25px !important;
+    width:25px !important;
+    font-size:25px !important;
+}
+
+.mat-primary {
+    background-color: white;
+    color: #000;
+}
+
+
+button {
+    font-size: 22px;
+}
+
+.card-big-shadow {
+    max-width: 320px;
+    position: relative;
+}
+
+.coloured-cards .card {
+    margin-top: 30px;
+}
+
+.card[data-radius="none"] {
+    border-radius: 0px;
+}
+
+.card {
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(204, 197, 185, 0.5);
+    background-color: #FFFFFF;
+    color: #252422;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+.card[data-background="image"] .title, .card[data-background="image"] .stats, .card[data-background="image"] .author, .card[data-background="image"] .message, .card[data-background="image"] .content, .card[data-background="image"] .card-footer, .card[data-background="image"] small, .card[data-background="image"] .content a, .card[data-background="color"] .title, .card[data-background="color"] .stats, .card[data-background="color"] .author, .card[data-background="color"] .message, .card[data-background="color"] .content, .card[data-background="color"] .card-footer, .card[data-background="color"] small, .card[data-background="color"] .content a {
+    color: #FFFFFF;
+}
+
+.card.card-just-text .content {
+    padding: 50px 65px;
+    text-align: center;
+}
+
+.card .content {
+    padding: 20px 20px 10px 20px;
+}
+
+.card[data-color="blue"] .author {
+    color: #7a9e9f;
+}
+
+.card .author, .card .label {
+    font-size: 14px;
+    margin-bottom: 0px;
+}
+
+.card-big-shadow:before {
+    background-image: url("http://static.tumblr.com/i21wc39/coTmrkw40/shadow.png");
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    bottom: -12%;
+    content: "";
+    display: block;
+    left: -12%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 0;
+}
+
+h4, .h4 {
+    font-size: 1.5em;
+    font-weight: 600;
+    line-height: 1.2em;
+}
+
+h6, .h6 {
+    font-size: 0.9em;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.card .message {
+    font-size: 17px;
+    color: #66615b;
+}
+
+.content-card{
+    display:flex;
+    justify-content:center;
+    margin-top:30px;    
+    transition: 0.2s linear;
+}
+
+.content-card:hover {
+    transform: scale(1.1);
+}
+
+a:hover, a:focus {
+    text-decoration: none;
+}
+
+/*======== COLORS ===========*/
+.card[data-color="blue"] {
+    background: #b8d8d8;
+}
+
+.card[data-color="blue"] .message {
+    color: #506568;
+}
+
+.card[data-color="green"] {
+    background: #d5e5a3;
+}
+
+.card[data-color="green"] .message {
+    color: #60773d;
+}
+
+.card[data-color="green"] .author {
+    color: #92ac56;
+}
+
+.card[data-color="yellow"] {
+    background: #ffe28c;
+}
+
+.card[data-color="yellow"] .message {
+    color: #b25825;
+}
+
+.card[data-color="yellow"] .author {
+    color: #d88715;
+}
+
+.card[data-color="brown"] {
+    background: #d6c1ab;
+}
+
+.card[data-color="brown"] .message {
+    color: #75442e;
+}
+
+.card[data-color="brown"] .author {
+    color: #a47e65;
+}
+
+.card[data-color="purple"] {
+    background: #baa9ba;
+}
+
+.card[data-color="purple"] .message {
+    color: #3a283d;
+}
+
+.card[data-color="purple"] .author {
+    color: #5a283d;
+}
+
+.card[data-color="orange"] {
+    background: #ff8f5e;
+}
+
+.card[data-color="orange"] .message {
+    color: #772510;
+}
+
+.card[data-color="orange"] .author {
+    color: #e95e37;
+}
+
+@media (min-width: 40em) {
+    
+    .logo {
+        width:auto;
+    }
+
+    .bodyText {
+        font-size: 1.8em;
+    }
+
+    .box {
+        width: 60%;
+        margin: auto;
+    }
+    
 }
