--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,23 +2,23 @@
   <div class="row mb-4 my-lg-0">
     <div class="col-lg-6">
         <div class="my-3">
-          <img class="logo" src="../../../assets/logo.png" alt="logo">
+          <img routerLink="/home" class="logo" src="../../../assets/logo.png" alt="logo">
         </div>
     </div>
     <div class="col-lg-6 my-auto d-flex justify-content-center">
-      <div class="mr-3" *ngIf="!(fireAuth.user | async)">
+      <div class="mx-2" *ngIf="!(fireAuth.user | async)">
         <button mat-raised-button color="primary" routerLink="/login">
           <mat-icon>login</mat-icon>
           <span> Login</span>
         </button>
       </div>
-      <div class="mr-3" *ngIf="(fireAuth.user | async)">
+      <div class="mx-2" *ngIf="(fireAuth.user | async)">
         <button mat-raised-button color="primary" routerLink="/dashboard">
-          <mat-icon>dashboard</mat-icon>
+          <mat-icon>view_module</mat-icon>
           <span>Dashboard</span>
         </button>
       </div>
-      <div class="mr-3" *ngIf="(fireAuth.user | async)">
+      <div class="mx-2" *ngIf="(fireAuth.user | async)">
         <button mat-raised-button color="primary" (click)="logout()">
           <mat-icon>logout</mat-icon>
           <span>Log out</span>
@@ -29,7 +29,7 @@
   <div class="box-container">
     <div class="row box">
       <div class="col-lg-6 my-auto">
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mb-5 mb-lg-0">
           <img class="eye-globe" src="../../../assets/eye-globe.svg" alt="eye-globe">
         </div>
       </div>
@@ -39,7 +39,7 @@
             We're all in this together. Consider joining a community that strives to relax your mind.
           </p>
           <p *ngIf="(fireAuth.user | async)" class="text bodyText text-center">
-            Welcome back! We hope you're doing okay, {{ (user | async)?.firstName }}.
+            Hello there! We hope you're doing okay, {{ (user | async)?.firstName }}.
           </p>
         </div>
         <div class="d-flex justify-content-center">
@@ -55,15 +55,18 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container my-5">
+  <div class="titleText text-center my-3">
+    ONE DAY AT A TIME
+  </div>
   <div class="row">
       <div class="col-lg-4 col-md-6 content-card">
           <div class="card-big-shadow">
               <div class="card card-just-text" data-background="color" data-color="blue" data-radius="none">
                   <div class="content">
-                      <h6 class="category">Anxiety</h6>
-                      <h4 class="title"><a href="#">Blue Card</a></h4>
-                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                      <h6 class="category">Idea</h6>
+                      <h4 class="title" style="color:rgb(107, 107, 107);">Blue Card</h4>
+                      <p class="description">Talk about a time where you had to overcome something that you thought you would never be able to overcome.</p>
                   </div>
               </div> <!-- end card -->
           </div>
@@ -73,9 +76,9 @@
           <div class="card-big-shadow">
               <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
                   <div class="content">
-                      <h6 class="category">Best cards</h6>
-                      <h4 class="title"><a href="#">Green Card</a></h4>
-                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                      <h6 class="category">About</h6>
+                      <h4 class="title" style="color:rgb(107, 107, 107);">Green Card</h4>
+                      <p class="description">Create note cards that contain anything you wish to talk about and allow feedback from other users!</p>
                   </div>
               </div> <!-- end card -->
           </div>
@@ -85,9 +88,9 @@
           <div class="card-big-shadow">
               <div class="card card-just-text" data-background="color" data-color="yellow" data-radius="none">
                   <div class="content">
-                      <h6 class="category">Best cards</h6>
-                      <h4 class="title"><a href="#">Yellow Card</a></h4>
-                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                      <h6 class="category">About</h6>
+                      <h4 class="title" style="color:rgb(107, 107, 107);" style="color:rgb(107, 107, 107);">Yellow Card</h4>
+                      <p class="description">Anxiety about a dental visit? Maybe another user shared an experience that can possibly ease some of your anxiety. :)</p>
                   </div>
               </div> <!-- end card -->
           </div>
@@ -97,9 +100,9 @@
           <div class="card-big-shadow">
               <div class="card card-just-text" data-background="color" data-color="brown" data-radius="none">
                   <div class="content">
-                      <h6 class="category">Best cards</h6>
-                      <h4 class="title"><a href="#">Brown Card</a></h4>
-                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                      <h6 class="category">Idea</h6>
+                      <h4 class="title" style="color:rgb(107, 107, 107);">Brown Card</h4>
+                      <p class="description">Share some information that you think might be insightful to others such as how hot the sun is, how vast is the ocean, or if aliens do exists...</p>
                   </div>
               </div> <!-- end card -->
           </div>
@@ -109,9 +112,9 @@
           <div class="card-big-shadow">
               <div class="card card-just-text" data-background="color" data-color="purple" data-radius="none">
                   <div class="content">
-                      <h6 class="category">Best cards</h6>
-                      <h4 class="title"><a href="#">Purple Card</a></h4>
-                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                      <h6 class="category">Idea</h6>
+                      <h4 class="title" style="color:rgb(107, 107, 107);">Purple Card</h4>
+                      <p class="description">Do you like to cook? Why don't you share a recipe with us. No gaurantee that it will come out as good as yours but it's okay!</p>
                   </div>
               </div> <!-- end card -->
           </div>
@@ -121,13 +124,36 @@
           <div class="card-big-shadow">
               <div class="card card-just-text" data-background="color" data-color="orange" data-radius="none">
                   <div class="content">
-                      <h6 class="category">Best cards</h6>
-                      <h4 class="title"><a href="#">Orange Card</a></h4>
-                      <p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>
+                      <h6 class="category">About</h6>
+                      <h4 class="title" style="color:rgb(107, 107, 107);">Orange Card</h4>
+                      <p class="description">Make yourself anonymous when creating posts if you don't feel comfortable sharing your name. We don't judge here and we never will.</p>
                   </div>
               </div> <!-- end card -->
           </div>
       </div>
+  </div>
+  <div class="my-5">
+    <div class="row">
+      <div class="col-lg-6 text-center text-lg-left bodyText my-auto">
+        Think of this as<span class="d-none d-lg-inline"> a group meeting about life!</span><br class="d-none d-lg-block"><span class="d-inline d-lg-none">...<br>
+        a group meeting about life!<br></span>
+        We all have something to share.<br>
+        We're never in this alone.
+      </div>
+      <div class="col-lg-6 my-5 my-lg-auto">
+        <div class="d-flex justify-content-center">
+          <img class="group p-4" src="../../../assets/group.svg" alt="group">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="py-4">
+  <div class="bodyText text-center my-1" style="font-size:20px; opacity:0.4;">
+    © 2022 Copyright: Minna
+  </div>
+  <div class="bodyText text-center mb-2" style="font-size:16px; opacity:0.3;">
+    Designed By: Chubby Designs
   </div>
 </div>
 
