--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -2,11 +2,11 @@
     <div class="row mb-4 my-lg-0">
         <div class="col-md-6">
             <div class="my-3">
-              <img class="logo" src="../../../assets/logo.png" alt="logo">
+              <img routerLink="/home" class="logo" src="../../../assets/logo.png" alt="logo">
             </div>
         </div>
         <div class="col-md-6 my-auto d-flex justify-content-center">
-            <div class="mr-3">
+            <div class="mx-2">
                 <button mat-raised-button color="primary" routerLink="/home">
                     <mat-icon>home</mat-icon>
                     <span>Home</span>
@@ -69,8 +69,14 @@
                     <button (click)="signup()" mat-raised-button color="primary">Signup</button>
                 </div>
 
+                <div class="bodyText text-center mt-4" style="font-size:18px;">
+                    <a class="link" routerLink="/login">
+                        Already have an account? Login!
+                    </a>
+                </div>
+
             </form>
-            <div class="d-flex justify-content-center mt-2">
+            <div class="d-flex justify-content-center mt-2" style="position:absolute;bottom:0; left:0; right:0;">
                 <div class="progressIndicator" [style.display]="isProgressVisible ? 'inline' : 'none' ">
                     <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
                 </div>
