--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -13,14 +13,20 @@
               <img routerLink="/home" class="logo" src="../../../assets/logo.png" alt="logo">
             </div>
         </div>
-        <div class="col-md-6 my-auto d-flex justify-content-center">
-            <div class="mx-2">
+        <div class="col-md-6 my-auto d-flex justify-content-center flex-wrap">
+            <div class="m-2">
                 <button mat-raised-button color="primary" routerLink="/home">
                     <mat-icon>home</mat-icon>
                     <span>Home</span>
                 </button>
             </div>
-            <div class="mx-2" *ngIf="(fireAuth.user | async)">
+            <div class="m-2">
+                <button mat-raised-button color="primary" routerLink="/profile">
+                    <mat-icon>person</mat-icon>
+                    <span>Profile</span>
+                </button>
+            </div>
+            <div class="m-2" *ngIf="(fireAuth.user | async)">
                 <button mat-raised-button color="primary" (click)="logout()">
                   <mat-icon>logout</mat-icon>
                   <span>Log out</span>
@@ -31,14 +37,18 @@
 </div>
 
 <div class="container mb-5">
-    <div class="d-flex justify-content-center mt-4">
+    <div class="d-flex justify-content-center d-lg-block float-lg-right mt-4 mb-4 mt-lg-2 mb-lg-0">
         <button routerLink="/create-post" mat-raised-button color="primary" style="background-color:lightgreen !important;">
             <mat-icon>add_box</mat-icon>
             <span> Add Post</span>
         </button>
     </div>
+    <div class="d-flex justify-content-center d-lg-block">
+        <mat-icon>search</mat-icon>
+        <input type="text" placeholder="Search" [(ngModel)]="searchText">
+    </div>
     <div class="row">
-        <div class="col-lg-4 col-md-6 content-card" *ngFor="let post of postData">
+        <div class="col-lg-4 col-md-6 content-card" *ngFor="let post of postData | filter:searchText">
             <a routerLink="/posts/{{post.id}}">
                 <div class="card-big-shadow">
                     <div class="card card-just-text" data-background="color" attr.data-color="{{post.color}}" data-radius="none">
