--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,10 @@
     font-family: 'Kalam';
 }
 
+.logo {
+    cursor:pointer;
+}
+
 html, body { 
     height: 100%;
 }
@@ -12,5 +16,6 @@ html, body {
 body { 
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: powderblue;
+    background: linear-gradient(90deg, rgb(255, 255, 255) 80%, #dff5ff 80%);
+    // background-attachment: fixed;
 }
