fix loading animation

--- a/src/app/components/logout/logout.component.html
+++ b/src/app/components/logout/logout.component.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="col-md-6 my-auto d-flex justify-content-center">
-            <div class="mx-2">
+            <div class="m-2">
                 <button mat-raised-button color="primary" routerLink="/home">
                     <mat-icon>home</mat-icon>
                     <span>Home</span>
