--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="col-md-6 my-auto d-flex justify-content-center">
-            <div class="mx-2">
+            <div class="m-2">
                 <button mat-raised-button color="primary" routerLink="/home">
                     <mat-icon>home</mat-icon>
                     <span>Home</span>
@@ -55,10 +55,8 @@
                 </div>
 
             </form>
-            <div class="d-flex justify-content-center mt-2" style="position:absolute;bottom:0; left:0; right:0;">
-                <div class="progressIndicator" [style.display]="isProgressVisible ? 'inline' : 'none' ">
-                    <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
-                </div>
+            <div class="loading progressIndicator"  *ngIf="isProgressVisible">
+                <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
             </div>
         </div>
     </div>
