--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -54,6 +54,15 @@
     text-decoration: underline;
 }
 
+.loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+}
+
 button {
     font-size: 22px;
 }
