update creation function

--- a/src/app/components/create-post/create-post.component.html
+++ b/src/app/components/create-post/create-post.component.html
@@ -147,7 +147,7 @@
             </div>
         </div>
     </div>
-    <div class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
-        {{firebaseErrorMessage}}
+    <div *ngIf="errorMessage" class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
+        {{errorMessage}}
     </div>
 </div>
