--- a/src/app/components/create-post/create-post.component.scss
+++ b/src/app/components/create-post/create-post.component.scss
@@ -143,6 +143,7 @@
     -ms-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
+    z-index: 1;
 }
 
 button {
