--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -47,7 +47,26 @@
         <mat-icon>search</mat-icon>
         <input type="text" placeholder="Search" [(ngModel)]="searchText">
     </div>
-    <div class="row">
+    <!-- <div class="d-flex justify-content-center mt-1 bodyText" style="position:relative;" *ngIf="searchText == ''">
+        <pagination-controls class="my-pagination" (pageChange)="p = $event"></pagination-controls>
+    </div> -->
+    <div class="row" *ngIf="searchText == ''">
+        <div class="col-lg-4 col-md-6 content-card" *ngFor="let post of postData | paginate: {itemsPerPage: 15, currentPage: p}">
+            <a routerLink="/posts/{{post.id}}">
+                <div class="card-big-shadow">
+                    <div class="card card-just-text" data-background="color" attr.data-color="{{post.color}}" data-radius="none">
+                        <div class="content">
+                            <h6 class="author mb-2">{{post.author}}</h6>
+                            <h4 class="title" style="color:rgb(93, 93, 93);">{{post.title | truncate:28}}</h4>
+                            <p class="message">{{post.message | truncate:100}}</p>
+                        </div>
+                    </div> <!-- end card -->
+                </div>
+            </a>
+        </div>
+    </div>
+    <!-- displays all posts when using search filter -->
+    <div class="row" *ngIf="searchText !== ''">
         <div class="col-lg-4 col-md-6 content-card" *ngFor="let post of postData | filter:searchText">
             <a routerLink="/posts/{{post.id}}">
                 <div class="card-big-shadow">
@@ -61,6 +80,13 @@
                 </div>
             </a>
         </div>
+    </div>
+    <!-- end -->
+    <div class="loading progressIndicator" *ngIf="pageLoading">
+        <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
+    </div>
+    <div class="d-flex justify-content-center my-1 pb-4 bodyText" style="position:relative;" *ngIf="searchText == ''">
+        <pagination-controls class="my-pagination" (pageChange)="onPageChange($event)" (pageChange)="p = $event"></pagination-controls>
     </div>
 </div>
 
