--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -42,6 +42,7 @@
     bottom: 0;
     opacity: 0.3;
     padding: 30px;
+    z-index: -1;
 }
 
 .image-two {
@@ -51,6 +52,7 @@
     right: 0;
     opacity: 0.3;
     padding: 30px;
+    z-index: -1;
 }
 
 .clipart-one {
@@ -82,6 +84,20 @@
 
 .mat-form-field.bigClass > input {
     font-size: 30px;
+}
+
+.my-pagination {
+    transform: translate(-1.5rem, 1rem);
+}
+
+.loading {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    z-index: 1;
 }
 
 button {
