update post component

--- a/src/app/components/create-post/create-post.component.scss
+++ b/src/app/components/create-post/create-post.component.scss
@@ -62,6 +62,18 @@
     background-color: pink !important;
 }
 
+.red {
+    background-color: rgb(255, 137, 137) !important;
+}
+
+.default {
+    background-color: #fff2c7 !important;
+}
+
+.grey {
+    background-color: rgb(189, 189, 189) !important;
+}
+
 .box {
     width: 90%;
     margin: auto;
