--- a/src/app/components/create-post/create-post.component.html
+++ b/src/app/components/create-post/create-post.component.html
@@ -11,7 +11,7 @@
                 Successfully Published
             </p>
             <p class="text-center" style="font-size:18px; color:rgb(133, 86, 0); line-height:25px;">
-                Redirecting Back To Dashboard...
+                Redirecting To The Dashboard...
             </p>
         </div>
     </div>
@@ -53,7 +53,7 @@
     <div class="my-5">
         <div class="row">
             <div class="col-lg-6">
-                <div class="d-flex justify-content-center my-auto">
+                <div class="d-flex justify-content-center mb-3 my-lg-auto">
                     <img class="pencil" src="../../../assets/pencil.svg" alt="pencil">
                 </div>
             </div>
@@ -70,19 +70,12 @@
             </div>
         </div>
     </div>
-    <div class="box-container" [ngClass]="{ fade: fadeForm, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost }">
+    <div class="box-container" [ngClass]="{ fade: fadeForm, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost, grey: bgGreyPost, red: bgRedPost, default: bgDefaultPost }">
         <div class="box">
             <div class="bodyText text-center mb-1">
                 Share a story or start a topic!
             </div>
             <form class="form" [formGroup]="postForm" type="">
-
-                <div class="form-panel" style="display:none;">
-                    <div class="form-row">
-                        <input [attr.disabled]="postForm.invalid ? true : true" type="text" name="color" formControlName="color" placeholder="Color" [ngClass]="{'invalid' : color && color.invalid && color.touched, 'valid' : color && color.valid && color.touched}" style="text-align:center; background:yellow; opacity:0.7;">
-                        <br>
-                    </div>
-                </div>
 
                 <div class="form-panel">
                     <div class="form-row">
@@ -94,26 +87,20 @@
                     <button class="mb-3 mb-lg-0 mx-lg-2" mat-raised-button color="primary" (click)="useName()">Use My Name</button>
                     <button class="mx-lg-2" mat-raised-button color="primary" (click)="hideName()">I Want To Be Anonymous</button>
                 </div>
-                <!-- <div class="text-center error-text" style="color:red; visibility:hidden;" [ngClass]="{'show' : author && author.invalid && author.touched}">
-                    Please enter a valid name
-                </div> -->
 
-                <div class="form-panel" style="display:none;">
-                    <div class="form-row">
-                        <input [attr.disabled]="postForm.invalid ? true : true" type="text" name="color" formControlName="color" placeholder="Color" [ngClass]="{'invalid' : color && color.invalid && color.touched, 'valid' : color && color.valid && color.touched}" style="text-align:center; background:yellow; opacity:0.7;">
-                        <br>
-                    </div>
-                </div>
                 <div class="bodyText text-center mt-2">
                     Pick a Color!
                 </div>
                 <div class="text-center d-lg-flex justify-content-center my-2">
-                    <button class="mx-2 mb-3" style="background-color:rgb(184,216,215);" mat-raised-button color="primary" (click)="bluePost()">Blue</button>
-                    <button class="mx-2 mb-3" style="background-color:rgb(213,229,163);" mat-raised-button color="primary" (click)="greenPost()">Green</button>
-                    <button class="mx-2 mb-3" style="background-color:rgb(254,226,139);" mat-raised-button color="primary" (click)="yellowPost()">Yellow</button>
-                    <button class="mx-2 mb-3" style="background-color:rgb(213,193,171);" mat-raised-button color="primary" (click)="brownPost()">Brown</button>
-                    <button class="mx-2 mb-3" style="background-color:rgb(186,169,186);" mat-raised-button color="primary" (click)="purplePost()">Purple</button>
-                    <button class="mx-2 mb-3" style="background-color:pink;" mat-raised-button color="primary" (click)="pinkPost()">Pink</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:#fff2c7;" mat-raised-button color="primary" (click)="defaultPost()">Default</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(184,216,215);" mat-raised-button color="primary" (click)="bluePost()">Blue</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(213,229,163);" mat-raised-button color="primary" (click)="greenPost()">Green</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(254,226,139);" mat-raised-button color="primary" (click)="yellowPost()">Yellow</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(213,193,171);" mat-raised-button color="primary" (click)="brownPost()">Brown</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(186,169,186);" mat-raised-button color="primary" (click)="purplePost()">Purple</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:pink;" mat-raised-button color="primary" (click)="pinkPost()">Pink</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(255, 137, 137);" mat-raised-button color="primary" (click)="redPost()">Red</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(189, 189, 189);" mat-raised-button color="primary" (click)="greyPost()">Grey</button>
                 </div>
         
                 <div class="form-panel">
@@ -138,7 +125,7 @@
                     <button mat-raised-button color="primary" disabled>Create Post</button>
                 </div>
                 <div class="d-flex justify-content-center mt-2" *ngIf="postForm.valid">
-                    <button (click)="createPost()" mat-raised-button color="primary" style="background-color:lightgreen !important;" >Create Post</button>
+                    <button (click)="createPost()" mat-raised-button color="primary" style="background-color:rgb(14, 153, 14) !important; color:white;" >Create Post</button>
                 </div>
 
             </form>
